Fixed horizontal scrollbar

--- a/MathsProject-hyperCubeWebsite/website/index.css
+++ b/MathsProject-hyperCubeWebsite/website/index.css
@@ -36,3 +36,7 @@
     position: absolute;
     z-index: -1000;
 }
+
+main {
+    overflow: hidden;
+}
